get '/:courseId/classes'
